[package]
name = "rust-async-server"
version = "0.1.0"
authors = ["D065023 <david.kunz@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
reqwest = "0.9.24"
dotenv = "0.15.0"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"

